[package]
name = "python_rust_json_patch"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_python_jsonpatch"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.115"
pyo3 = { version = "0.21.1", features = ["extension-module"] }
json-patch = "*"
